# ocs2_mujoco

./: .gitignore  LICENSE  README.md
simulate/: CMakeLists.txt  build.sh  config.yaml
simulate/src/: main.cc
simulate/src/cartpole_bridge/: cartpole_bridge.h
simulate/src/mujoco/: simulate.cc  simulate.h
simulate/src/quadrotor_bridge/: quadrotor_bridge.h
simulate/src/quadruped_bridge/: quadruped_bridge.h
simulate/src/ros/: CameraNode.hpp  FastMujoco2RosBridge.hpp  gpu_pointcloud.cu  gpu_pointcloud.hpp
src/anymal_centroidal/: CMakeLists.txt  README.md  package.xml
src/anymal_centroidal/include/anymal_centroidal/: AnymalDefinition.h  package_path.h.in
src/anymal_centroidal/robots/anymal_c/: anymal_c_real.xml
src/anymal_centroidal/src/: main_centroidal_gui.cpp
src/anymal_pinocchio/: CMakeLists.txt  README.md  package.xml
src/anymal_pinocchio/include/anymal_pinocchio/: AnymalPinocchioDefinition.h  package_path.h.in
src/anymal_pinocchio/src/: main_pinocchio_gui.cpp
src/anymal_walking_online/: CMakeLists.txt  README.md  package.xml
src/anymal_walking_online/include/anymal_walking_online/: FSMController.h  KeyboardController.h  LeggedRobotInterface.h  LeggedRobotPreComputation.h  XboxController.h  package_path.h.in
src/anymal_walking_online/include/anymal_walking_online/common/: DebugUtils.h  ModelSettings.h  Types.h  utils.h
src/anymal_walking_online/include/anymal_walking_online/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
src/anymal_walking_online/include/anymal_walking_online/cost/: LeggedRobotQuadraticTrackingCost.h
src/anymal_walking_online/include/anymal_walking_online/dynamics/: LeggedRobotDynamicsAD.h
src/anymal_walking_online/include/anymal_walking_online/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
src/anymal_walking_online/include/anymal_walking_online/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
src/anymal_walking_online/include/anymal_walking_online/initialization/: LeggedRobotInitializer.h
src/anymal_walking_online/src/: FSMController.cpp  KeyboardController.cpp  LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp  XboxController.cpp  main_anymal_mujoco.cpp  testAnymalInterface.cpp
src/anymal_walking_online/src/common/: ModelSettings.cpp
src/anymal_walking_online/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
src/anymal_walking_online/src/dynamics/: LeggedRobotDynamicsAD.cpp
src/anymal_walking_online/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
src/anymal_walking_online/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
src/anymal_walking_online/src/initialization/: LeggedRobotInitializer.cpp
src/anymal_walking_online/src/mujoco_gui/: simulate.cc
src/anymal_walking_online/src/reference_manager/: SwitchedModelReferenceManager.cpp
src/ocs2_cartpole_upright/: CMakeLists.txt  README.md  package.xml
src/ocs2_cartpole_upright/config/mpc/: task.info
src/ocs2_cartpole_upright/include/ocs2_cartpole/: CartPoleInterface.h  CartPoleParameters.h  CartpoleDynamicsPinocchio.h  CartpoleUDP.h
src/ocs2_cartpole_upright/src/: CartPoleInterface.cpp  CartpoleDynamicsPinocchio.cpp  CartpoleUDP.cpp  main_udp_nmpc.cpp
src/ocs2_quadrotor_nmpc/: CMakeLists.txt  README.md  package.xml
src/ocs2_quadrotor_nmpc/config/mpc/: task.info
src/ocs2_quadrotor_nmpc/include/ocs2_quadrotor_nmpc/: KeyboardController.h  QuadrotorDefinition.h  QuadrotorDynamics.h  QuadrotorInterface.h  QuadrotorParameters.h  QuadrotorUDP.h  XboxController.h
src/ocs2_quadrotor_nmpc/src/: KeyboardController.cpp  QuadrotorDynamics.cpp  QuadrotorInterface.cpp  QuadrotorUDP.cpp  XboxController.cpp  main_udp_nmpc.cpp
src/quadrotor_offline/: CMakeLists.txt  README.md  package.xml
src/quadrotor_offline/config/: task.info
src/quadrotor_offline/include/quadrotor_offline/: QuadrotorDefinition.h  QuadrotorDynamics.h  QuadrotorInterface.h  QuadrotorParameters.h  package_path.h.in
src/quadrotor_offline/robots/: quadrotor.xml
src/quadrotor_offline/src/: QuadrotorDynamics.cpp  QuadrotorInterface.cpp  main_offline_mujoco.cpp
src/quadrotor_online/: CMakeLists.txt  README.md  package.xml
src/quadrotor_online/config/: task.info
src/quadrotor_online/include/quadrotor_online/: KeyboardController.h  QuadrotorDefinition.h  QuadrotorDynamics.h  QuadrotorInterface.h  QuadrotorParameters.h  XboxController.h  package_path.h.in
src/quadrotor_online/robots/: quadrotor.xml
src/quadrotor_online/src/: KeyboardController.cpp  QuadrotorDynamics.cpp  QuadrotorInterface.cpp  XboxController.cpp  main_interactive_gui.cpp
src/quadrotor_online/src/mujoco_gui/: platform_ui_adapter.cc  platform_ui_adapter.h
src/quadruped_nmpc/: CMakeLists.txt  README.md  package.xml
src/quadruped_nmpc/include/quadruped_nmpc/: FSMController.h  KeyboardController.h  LeggedRobotInterface.h  LeggedRobotPreComputation.h  QuadrupedUDP.h  XboxController.h  package_path.h.in
src/quadruped_nmpc/robots/anymal_c/: anymal_c_real.xml
src/quadruped_nmpc/src/: FSMController.cpp  KeyboardController.cpp  LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp  QuadrupedUDP.cpp  XboxController.cpp  main.cpp
src/quadruped_nmpc/src/common/: ModelSettings.cpp
src/quadruped_nmpc/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
src/quadruped_nmpc/src/dynamics/: LeggedRobotDynamicsAD.cpp
src/quadruped_nmpc/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
src/quadruped_nmpc/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
src/quadruped_nmpc/src/initialization/: LeggedRobotInitializer.cpp
src/quadruped_nmpc/src/reference_manager/: SwitchedModelReferenceManager.cpp
(+110 files in other folders)
