<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_quadrotor_nmpc</name>
  <version>0.1.0</version>
  <description>Quadrotor NMPC Controller using OCS2 with UDP simulation bridge</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>pinocchio</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
