<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_offline</name>
  <version>1.0.0</version>
  <description>Offline quadrotor NMPC with MuJoCo visualization</description>
  <maintainer email="quangvd7@gmail.com">quangvd7</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
