<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_nmpc</name>
  <version>1.0.0</version>
  <description>
    Quadruped NMPC Controller via UDP
    OCS2 Centroidal MPC + WBC with MuJoCo via UDP bridge
    Standalone package with full MPC implementation
  </description>
  <maintainer email="quangvd7@example.com">quangvd7</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- OCS2 dependencies -->
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ipm</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_robotic_assets</depend>

  <!-- System dependencies -->
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
